Changes: An animation engine has been created, a micro-library with descriptions of basic functions over a pixel has been created (blending, brightness, pixel generation by temperature in Kelvin, translation from HLS color space to RGB888, generation of a black-and-white pixel by value). A basic shader for filling with one color has been created. A rainbow animation has been created based on filling with one color and generating HLS color. A sketch of the Rendering Pipeline module has been created.
Fixed:
bugs and memory leaks in modules for creating animations and managing them, as well as in the timer module

Version: PC_Unix_ALPHA:0.2.10
Date Update: 18.06.2025 (00:54)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required(VERSION 3.31)
 project(ESP32_Render_engine2 C)
 
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_COMPILER /opt/homebrew/bin/gcc-15)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -g -O1")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -g -O1")
+    set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -fsanitize=address")
+endif()
 
 add_executable(ESP32_Render_engine2 main.c
         Render_Engine/STL_LIB/List.h
@@ -12,7 +16,6 @@ add_executable(ESP32_Render_engine2 main.c
         Render_Engine/Color_Spaces/HSL.c
         Render_Engine/main_types/FBO.h
         Render_Engine/main_types/FBO.c
-        Render_Engine/config.h
         Render_Engine/STL_LIB/malloc_tracked.c
         Render_Engine/STL_LIB/malloc_tracked.h
         Render_Engine/main_types/Render_State.h
@@ -22,5 +25,15 @@ add_executable(ESP32_Render_engine2 main.c
         Render_Engine/STL_LIB/timer_manager.h
         Render_Engine/main_types/Debuger_CLI.c
         Render_Engine/main_types/Debuger_CLI.h
+        "Render_Engine/GXF/GFX_Animation_core/GFX_Animation_core.c"
+        "Render_Engine/GXF/GFX_Animation_core/GFX_Animation_core.h"
+        Render_Engine/GXF/GFX_Functions/GFX_Functions_Pixel.c
+        Render_Engine/GXF/GFX_Functions/GFX_Functions_Pixel.h
+        Render_Engine/GXF/GFX_Functions/Shaders/ColorFill.c
+        Render_Engine/GXF/GFX_Functions/Shaders/ColorFill.h
+        Render_Engine/GXF/PipeLine_rendering.c
+        Render_Engine/GXF/PipeLine_rendering.h
+        Render_Engine/GXF/GFX_Animation_core/Animations/Rainbow.c
+        Render_Engine/GXF/GFX_Animation_core/Animations/Rainbow.h
 )
 
