Changes: Added sound effect and working whi network
Version: PC_Unix_ALPHA:0.2.25
Date Update: 28.06.2025 (17:50)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_C_STANDARD 99)
 
 if(PLATFORM STREQUAL "UNIX")
     add_definitions(-DPLATFORM_UNIX)
+    target_link_libraries(ESP32_Render_engine2 PRIVATE /usr/local/lib/libws2811.a)
 elseif(PLATFORM STREQUAL "MACOSX_ARM64")
     add_definitions(-DPLATFORM_MACOSX_ARM64)
 endif()
