Changes: Added sound effect and working whi network
Version: PC_Unix_ALPHA:0.2.25
Date Update: 28.06.2025 (17:50)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,11 +54,13 @@ add_executable(ESP32_Render_engine2 main.c
 
 set(EXTRA_LIBS m)
 if(DISPLAY_OUT STREQUAL "WS281X_RPI")
-    message(STATUS "WS281X_RPI backend enabled")
-    list(APPEND SOURCES Render_Engine/DeviceRender/Rpi/Rpi_WS2811.c)
-    add_definitions(-DWS281X_RPI)
+    target_link_libraries(ESP32_Render_engine2 PRIVATE /usr/local/lib/libws2811.a)
+
     include_directories(/usr/local/include)
-    list(APPEND EXTRA_LIBS /usr/local/lib/libws2811.a)  # <=== прямой путь к .a
+    link_directories(/usr/local/lib)
+
+    add_executable(ws281x_demo main.c)
+    target_link_libraries(ws281x_demo ws2811) # <=== прямой путь к .a
 endif()
 
 target_link_libraries(ESP32_Render_engine2 m)
