--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,8 @@ if(DISPLAY_OUT STREQUAL "WS281X_RPI")
 
     include_directories(/usr/local/include)
     link_directories(/usr/local/lib)
+
+    target_link_libraries(ESP32_Render_engine2 m ws2811)# <=== прямой путь к .a
 endif()
 
-target_link_libraries(ESP32_Render_engine2 m)
 
