Changes: Added sound effect and working with network
Version: PC_Unix_ALPHA:0.2.5
Date Update: 28.06.2025 (23:03)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(ESP32_Render_engine2 C)
 
 set(CMAKE_C_STANDARD 99)
 set(DEBUG_SOFWARE 1)
-set(DISPLAY_OUT "NULL")
+set(DISPLAY_OUT "WS281X_RPI")
 
 
 if(PLATFORM STREQUAL "UNIX")
